# picoclaw-auto-ai-researcher

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-autonomous-agent-foundations.md  02-reinforcement-learning-profiles.md  03-continuous-learning-architectures.md  04-mixture-of-agents-systems.md  05-ai-research-community-workflow.md  06-research-gap-filling.md  07-architecture-and-roadmap.md  08-hallucination-cascade-prevention.md  09-bitter-lesson-loops-and-novel-paths.md  10-hardware-budget-and-scaling.md  11-self-improving-loop-analysis.md  12-data-requirements-and-intractability-analysis.md
experiments/: E01-claim-extraction-accuracy.md  E02-llm-judge-reliability.md  E03-semantic-novelty-measurement.md  E04-knowledge-graph-consistency.md  E05-gap-map-detection-accuracy.md  E06-sunfire-scoring-validation.md  E07-reflexion-memory-impact.md  E08-critic-agent-effectiveness.md  E09-react-reflexion-iteration-dynamics.md  E10-evolutionary-strategy-search.md  E11-self-play-debate-dynamics.md  E12-self-training-stability.md  E13-full-react-reflexion-research-loop.md  E14-evolutionary-research-loop.md  E15-loop-comparison-and-composition.md  README.md
experiments/E01/: README.md  run_experiment.py
experiments/E02/: run_experiment.py
experiments/E03/: run_experiment.py
experiments/E04/: run_experiment.py
src/auto_researcher/: __init__.py  config.py  main.py
tests/agents/: test_agents.py  test_base.py
tests/evaluation/: test_iwpg.py  test_peer_review.py  test_sunfire.py  (+1 more)
(+454 files in other folders)
