[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-researcher"
version = "0.1.0"
description = "An autonomous AI research system that explores the intelligence space, identifies research gaps, and produces novel scientific contributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "tenacity>=8.0",
    "structlog>=24.0",
    "neo4j>=6.1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "bertopic>=0.16",
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
services = [
    "neo4j>=5.0",
    "qdrant-client>=1.9",
    "arxiv>=2.1",
    "pymupdf>=1.24",
    "anthropic>=0.40",
    "openai>=1.40",
    "apscheduler>=3.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "auto-researcher[ml,services]",
]

[project.scripts]
auto-researcher = "auto_researcher.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_researcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
